--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
-  "name": "init-build-webcam-ai",
+  "name": "ai-guild-webcam",
   "private": true,
   "version": "0.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "tsc && vite build",
+    "build": "vite build",
     "preview": "vite preview"
   },
   "dependencies": {
@@ -15,8 +15,7 @@
   "devDependencies": {
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
-    "@vitejs/plugin-react-swc": "^3.0.0",
-    "typescript": "^4.9.3",
+    "@vitejs/plugin-react": "^3.1.0",
     "vite": "^4.2.0"
   }
 }
